Add "bookmark" icon; and fixing scale/ current page number issues

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -70,6 +70,10 @@
 
       <div class="separator"></div>
 
+      <a href="#" id="viewBookmark" title="Current View (bookmark or copy the location)">
+        <img src="images/bookmark.svg" alt="Bookmark" align="top" height="32"/>
+      </a>
+
       <span id="info">--</span>
     </div>
 
