--- a/web/viewer.html
+++ b/web/viewer.html
@@ -17,12 +17,12 @@
 
   <body>
     <div id="controls">
-      <button id="previous" onclick="PDFView.page--;">
+      <button id="previous" onclick="PDFView.page--;" oncontextmenu="return false;">
         <img src="images/go-up.svg" align="top" height="32"/>
         Previous
       </button>
 
-      <button id="next" onclick="PDFView.page++;">
+      <button id="next" onclick="PDFView.page++;" oncontextmenu="return false;">
         <img src="images/go-down.svg" align="top" height="32"/>
         Next
       </button>
@@ -36,16 +36,16 @@
 
       <div class="separator"></div>
 
-      <button id="next" title="Zoom Out" onclick="PDFView.zoomOut();">
+      <button id="next" title="Zoom Out" onclick="PDFView.zoomOut();" oncontextmenu="return false;">
         <img src="images/zoom-out.svg" align="top" height="32"/>
       </button>
-      <button id="next" title="Zoom In" onclick="PDFView.zoomIn();">
+      <button id="next" title="Zoom In" onclick="PDFView.zoomIn();" oncontextmenu="return false;">
         <img src="images/zoom-in.svg" align="top" height="32"/>
       </button>
 
       <div class="separator"></div>
 
-      <select id="scaleSelect" onchange="PDFView.parseScale(this.value);">
+      <select id="scaleSelect" onchange="PDFView.parseScale(this.value);" oncontextmenu="return false;">
         <option id="customScaleOption" value="custom"></option>
         <option value="0.5">50%</option>
         <option value="0.75">75%</option>
@@ -59,14 +59,14 @@
 
       <div class="separator"></div>
 
-      <button id="print" onclick="window.print();">
+      <button id="print" onclick="window.print();" oncontextmenu="return false;">
         <img src="images/document-print.svg" align="top" height="32"/>
         Print
       </button>
 
       <div class="separator"></div>
 
-      <input id="fileInput" type="file"/>
+      <input id="fileInput" type="file" oncontextmenu="return false;"/>
 
       <div class="separator"></div>
 
