--- a/web/viewer.html
+++ b/web/viewer.html
@@ -36,10 +36,10 @@
 
       <div class="separator"></div>
 
-      <button id="next" title="Zoom Out" onclick="PDFView.zoomOut();" oncontextmenu="return false;">
+      <button id="zoomOut" title="Zoom Out" onclick="PDFView.zoomOut();" oncontextmenu="return false;">
         <img src="images/zoom-out.svg" align="top" height="32"/>
       </button>
-      <button id="next" title="Zoom In" onclick="PDFView.zoomIn();" oncontextmenu="return false;">
+      <button id="zoomIn" title="Zoom In" onclick="PDFView.zoomIn();" oncontextmenu="return false;">
         <img src="images/zoom-in.svg" align="top" height="32"/>
       </button>
 
