Use 'hidden' instead of display: none

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -82,7 +82,7 @@
         <div id="sidebarScrollView">
           <div id="sidebarView"></div>
         </div>
-        <div id="outlineScrollView" style="display:none">
+        <div id="outlineScrollView" hidden='true'>
           <div id="outlineView"></div>
         </div>
         <div id="sidebarControls">
