Add a download button in case the extension is not enough

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -64,6 +64,11 @@
         Print
       </button>
 
+      <button id="download" title="Download" onclick="PDFView.download();" oncontextmenu="return false;">
+        <img src="images/download.svg" align="top" height="32"/>
+        Download
+      </button>
+
       <div class="separator"></div>
 
       <input id="fileInput" type="file" oncontextmenu="return false;"/>
