--- a/extensions/chrome/pdfHandler.html
+++ b/extensions/chrome/pdfHandler.html
@@ -2,7 +2,8 @@
 <script>
 chrome.experimental.webRequest.onBeforeRequest.addListener(
   function(details) {
-    var url = chrome.extension.getURL('') + 'web/viewer.html?file=' + details.url;
+    var params = '?file=' + details.url;
+    var url = chrome.extension.getURL('web/viewer.html') + params;
     return { redirectUrl: url };
   },
   {
