--- a/web/viewer.html
+++ b/web/viewer.html
@@ -6,7 +6,7 @@
 
         <script type="text/javascript" src="compatibility.js"></script>
         <script type="text/javascript" src="viewer.js"></script>
-        <script type="text/javascript" src="../pdf.js"></script>
+        <script type="text/javascript" src="../build/pdf.js"></script>
   </head>
 
   <body>
