--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -3,16 +3,8 @@
   <head>
     <title>pdf.js test slave</title>
     <style type="text/css"></style>
-    <script type="text/javascript" src="/pdf.js"></script>
-    <script type="text/javascript" src="/fonts.js"></script>
-    <script type="text/javascript" src="/crypto.js"></script>
-    <script type="text/javascript" src="/glyphlist.js"></script>
-    <script type="text/javascript" src="/metrics.js"></script>
-    <script type="text/javascript" src="/charsets.js"></script>
-    <script type="text/javascript" src="/cidmaps.js"></script>
+    <script type="text/javascript" src="/build/pdf.js"></script>
     <script type="text/javascript" src="driver.js"></script>
-    <script type="text/javascript" src="../worker/message_handler.js"></script>
-    <script type="text/javascript" src="../worker/processor_handler.js"></script>
   </head>
 
   <body>
