--- a/examples/helloworld/index.html
+++ b/examples/helloworld/index.html
@@ -3,13 +3,7 @@
 
 <head>
   <!-- PDF.js-specific -->
-  <script type="text/javascript" src="../../pdf.js"></script>
-  <script type="text/javascript" src="../../metrics.js"></script>
-  <script type="text/javascript" src="../../fonts.js"></script>
-  <script type="text/javascript" src="../../glyphlist.js"></script>
-  <script type="text/javascript" src="../../worker/message_handler.js"></script>
-  <script type="text/javascript" src="../../worker/processor_handler.js"></script>
-
+  <script type="text/javascript" src="../../build/pdf.js"></script>
   <script type="text/javascript" src="hello.js"></script>
 </head>  
 
