--- a/web/viewer.html
+++ b/web/viewer.html
@@ -3,10 +3,28 @@
     <head>
         <title>Simple pdf.js page viewer</title>
         <link rel="stylesheet" href="viewer.css"/>
+        
+        <script type="text/javascript" src="../src/core.js"></script>
+        <script type="text/javascript" src="../src/util.js"></script>
+        <script type="text/javascript" src="../src/canvas.js"></script>
+        <script type="text/javascript" src="../src/obj.js"></script>
+        <script type="text/javascript" src="../src/function.js"></script>
+        <script type="text/javascript" src="../src/charsets.js"></script>
+        <script type="text/javascript" src="../src/cidmaps.js"></script>
+        <script type="text/javascript" src="../src/colorspace.js"></script>
+        <script type="text/javascript" src="../src/crypto.js"></script>
+        <script type="text/javascript" src="../src/evaluator.js"></script>
+        <script type="text/javascript" src="../src/fonts.js"></script>
+        <script type="text/javascript" src="../src/glyphlist.js"></script>
+        <script type="text/javascript" src="../src/image.js"></script>
+        <script type="text/javascript" src="../src/metrics.js"></script>
+        <script type="text/javascript" src="../src/parser.js"></script>
+        <script type="text/javascript" src="../src/pattern.js"></script>
+        <script type="text/javascript" src="../src/stream.js"></script>
+        <script type="text/javascript" src="../src/worker.js"></script>
 
         <script type="text/javascript" src="compatibility.js"></script>
         <script type="text/javascript" src="viewer.js"></script>
-        <script type="text/javascript" src="../build/pdf.js"></script>
   </head>
 
   <body>
