--- a/web/viewer-snippet.html
+++ b/web/viewer-snippet.html
@@ -1,2 +1,7 @@
 <!-- This snippet is used in production, see Makefile -->
 <script type="text/javascript" src="../build/pdf.js"></script>
+<script type="text/javascript">
+  // This specifies the location of the pdf.js file. This is necessary to
+  // spawn the web worker.
+  var PDFJS_WORKER_FILE = "../build/pdf.js";
+</script>
