Adapt the build script so the file control can be removed from the html when building the extension.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -83,11 +83,11 @@
         <img src="images/download.svg" align="top" height="16"/>
         Download
       </button>
-<!--
-      <div class="separator"></div>
 
-      <input id="fileInput" type="file" oncontextmenu="return false;"/>
--->
+      <div class="separator"></div> <!-- PDFJSSCRIPT_REMOVE_EXTENSION -->
+
+      <input id="fileInput" type="file" oncontextmenu="return false;"/> <!-- PDFJSSCRIPT_REMOVE_EXTENSION -->
+	  
       <div class="separator"></div>
 
       <a href="#" id="viewBookmark" title="Bookmark (or copy) current location">
