--- a/examples/helloworld/index.html
+++ b/examples/helloworld/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- In production, only one script (pdf.js) is necessary -->
+  <!-- In production, change the content of PDFJS.workerSrc below -->
   <script type="text/javascript" src="../../src/core.js"></script>
   <script type="text/javascript" src="../../src/util.js"></script>
   <script type="text/javascript" src="../../src/canvas.js"></script>
@@ -23,9 +24,9 @@
   <script type="text/javascript" src="../../src/worker.js"></script>
 
   <script type="text/javascript">
-    // Specify the directory of the source files, such that the web worker
-    // knows where to load them.
-    var PDFJS_WORKER_DIR = '../../src/';
+    // Specify the main script used to create a new PDF.JS web worker.
+    // In production, change this to point to the combined `pdf.js` file.
+    PDFJS.workerSrc = '../../src/worker_loader.js';
   </script>
   <script type="text/javascript" src="hello.js"></script>
 </head>
