--- a/web/viewer.html
+++ b/web/viewer.html
@@ -84,9 +84,9 @@
         Download
       </button>
 
-      <div class="separator"></div> <!-- PDFJSSCRIPT_EXTENSION_REMOVE -->
+      <div class="separator"></div> <!-- PDFJSEXTENSION_REMOVE -->
 
-      <input id="fileInput" type="file" oncontextmenu="return false;"/> <!-- PDFJSSCRIPT_EXTENSION_REMOVE -->
+      <input id="fileInput" type="file" oncontextmenu="return false;"/> <!-- PDFJSEXTENSION_REMOVE -->
 	  
       <div class="separator"></div>
 
