Add content/ to the viewer.html path

--- a/extensions/chrome/pdfHandler.html
+++ b/extensions/chrome/pdfHandler.html
@@ -2,7 +2,8 @@
 <script>
 chrome.experimental.webRequest.onBeforeRequest.addListener(
   function(details) {
-    var url = chrome.extension.getURL('') + 'web/viewer.html?file=' + details.url;
+    var viewerPage = 'content/web/viewer.html';
+    var url = chrome.extension.getURL(viewerPage) + '?file=' + details.url;
     return { redirectUrl: url };
   },
   {
