Fix left scroll bug; "Browser" to "Browse"

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -51,7 +51,7 @@
 
       <button id="sidebarToggle" title="Thumbnails and index browser" onclick="PDFView.sidebarToggle();" oncontextmenu="return false;">
         <img src="images/document.svg" align="top" height="16"/>
-        Browser
+        Browse
       </button>
 
       <div class="separator"></div>
