Add jasmine files to external-directory.

--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -3,14 +3,14 @@
 <head>
   <title>pdf.js unit test</title>
 
-  <link rel="shortcut icon" type="image/png" href="../../../jasmine/images/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="../../../jasmine/lib/jasmine-core/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="../../external/jasmine/jasmine_favicon.png">
+  <link rel="stylesheet" type="text/css" href="../../external/jasmine/jasmine.css">
 
-  <script type="text/javascript" src="../../../jasmine/lib/jasmine-core/jasmine.js"></script>
-  <script type="text/javascript" src="../../../jasmine/lib/jasmine-core/jasmine-html.js"></script>
+  <script type="text/javascript" src="../../external/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="../../external/jasmine/jasmine-html.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/obj_spec.js"></script>
+  <script type="text/javascript" src="obj_spec.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../../src/obj.js"></script>
