Adding new errorback and code to display error messages.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -97,6 +97,24 @@
 
       <span id="info">--</span>
     </div>
+    <div id="errorWrapper" hidden='true'>
+      <div id="errorMessageLeft">
+        <span id="errorMessage"></span>
+        <button id="errorShowMore" onclick="" oncontextmenu="return false;">
+          More Information
+        </button>
+        <button id="errorShowLess" onclick="" oncontextmenu="return false;" hidden='true'>
+          Less Information
+        </button>
+      </div>
+      <div id="errorMessageRight">
+        <button id="errorClose" oncontextmenu="return false;">
+          X
+        </button>
+      </div>
+      <div class="clearBoth"></div>
+      <div id="errorMoreInfo" hidden='true'></div>
+    </div>
 
     <div id="sidebar">
       <div id="sidebarBox">
