Address Yury's comments.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -109,7 +109,7 @@
       </div>
       <div id="errorMessageRight">
         <button id="errorClose" oncontextmenu="return false;">
-          X
+          Close
         </button>
       </div>
       <div class="clearBoth"></div>
