move inputHint to examples

--- a/examples/acroforms/index.html
+++ b/examples/acroforms/index.html
@@ -39,6 +39,7 @@
   .pdfpage > div { position: absolute; top: 0; left: 0; }
   .inputControl { background: transparent; border: 0px none; position: absolute; margin: auto; }
   .inputControl[type='checkbox'] { margin: 0px; }
+  .inputHint { opacity: 0.2; background: #ccc; position: absolute; }
   </style>
 
   <script type="text/javascript" src="forms.js"></script>
