--- a/web/viewer.html
+++ b/web/viewer.html
@@ -67,10 +67,11 @@
         <option value="0.75">75%</option>
         <option value="1">100%</option>
         <option value="1.25">125%</option>
-        <option value="1.5" selected="selected">150%</option>
+        <option value="1.5">150%</option>
         <option value="2">200%</option>
         <option id="pageWidthOption" value="page-width">Page Width</option>
         <option id="pageFitOption" value="page-fit">Page Fit</option>
+        <option id="pageAutoOption" value="auto" selected="selected">Auto</option>
       </select>
 
       <div class="separator"></div>
