Add unit tests for calculateMD5, ARCFourCipher, and PredictorStream

--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -12,6 +12,8 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="obj_spec.js"></script>
   <script type="text/javascript" src="function_spec.js"></script>
+  <script type="text/javascript" src="crypto_spec.js"></script>
+  <script type="text/javascript" src="stream_spec.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../../src/core.js"></script>
