--- a/web/viewer.html
+++ b/web/viewer.html
@@ -33,6 +33,45 @@
         <script type="text/javascript" src="viewer.js"></script>
 
     </head>
+	
+	
+	<script type="text/javascript">
+	
+	function pinCleanup() {
+		var sidebarClass = document.getElementById("sidebar").className;
+		sidebarClass = sidebarClass.replace( /(?:^|\s)released(?!\S)/ , '' );
+		sidebarClass = sidebarClass.replace( /(?:^|\s)pinned(?!\S)/ , '' );	
+		document.getElementById("sidebar").className = sidebarClass;
+		
+		var iconClass = document.getElementById("pinIcon").className;
+		iconClass = iconClass.replace( /(?:^|\s)released(?!\S)/ , '' );
+		iconClass = iconClass.replace( /(?:^|\s)pinned(?!\S)/ , '' );	
+		document.getElementById("pinIcon").className = iconClass;
+	}
+	
+	function pinActivate() {
+		pinCleanup();
+		
+		document.getElementById("sidebar").className = (document.getElementById("sidebar").className + " pinned").trim();
+		document.getElementById("pinIcon").className = (document.getElementById("pinIcon").className + " pinned").trim();
+	}
+
+	function pinDeactivate() {
+		pinCleanup();
+		
+		document.getElementById("sidebar").className = (document.getElementById("sidebar").className + " released").trim();
+		document.getElementById("pinIcon").className = (document.getElementById("pinIcon").className + " released").trim();	
+	}
+	
+	function pinToggle() {
+		var iconClass = document.getElementById("pinIcon").className;
+		if(iconClass == "pinned")
+			pinDeactivate();
+		else
+			pinActivate();
+	}
+
+	</script>
 
   <body>
     <div id="controls">
@@ -120,9 +159,10 @@
       <textarea id="errorMoreInfo" hidden='true' readonly="readonly"></textarea>
     </div>
 
-    <div id="sidebar">
+    <div id="sidebar" class="released">
       <div id="sidebarBox">
-        <div id="sidebarScrollView">
+	    <div id="pinIcon" class="released" onClick="javascript:pinToggle()"></div>
+	    <div id="sidebarScrollView">
           <div id="sidebarView"></div>
         </div>
         <div id="outlineScrollView" hidden='true'>
