Got rid of the "released" class and made the pin icon depend on the sidebar state.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -120,9 +120,9 @@
       <textarea id="errorMoreInfo" hidden='true' readonly="readonly"></textarea>
     </div>
 
-    <div id="sidebar" class="released">
+    <div id="sidebar">
       <div id="sidebarBox">
-        <div id="pinIcon" class="released" onClick="PDFView.pinSidebar()"></div>
+        <div id="pinIcon" onClick="PDFView.pinSidebar()"></div>
         <div id="sidebarScrollView">
           <div id="sidebarView"></div>
         </div>
