Fullscreen works in Chrome

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -92,6 +92,8 @@
         Download
       </button>
 
+      <button id="fullscreen" title="Fullscreen" onclick="PDFView.fullscreen();" oncontextmenu="return false;">Fullscreen</button>
+
       <div class="separator"></div>
 
       <input id="fileInput" type="file" oncontextmenu="return false;"/>
