Working in FF, not working in Chrome

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -145,6 +145,8 @@
     </div>
 
     <div id="loading">Loading... 0%</div>
-    <div id="viewer"></div>
+    <div id="fullscreenwrapper">
+      <div id="viewer"></div>
+    </div>
   </body>
 </html>
