Add a progressbar to the loading indicator, below the text.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -142,7 +142,10 @@
       </div>
     </div>
 
-    <div id="loading">Loading... 0%</div>
+    <div id="loadingBox">
+        <div id="loading">Loading... 0%</div>
+        <div id="loadingBar"><div id="progress"></div><div id="remaining"></div></div>
+    </div>
     <div id="viewer"></div>
   </body>
 </html>
