Simplified ProgressBar class. Visual tweaks.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -144,7 +144,7 @@
 
     <div id="loadingBox">
         <div id="loading">Loading... 0%</div>
-        <div id="loadingBar"><div id="progress"></div><div id="remaining"></div></div>
+        <div id="loadingBar"><div class="progress"></div><div class="remaining"></div></div>
     </div>
     <div id="viewer"></div>
   </body>
