--- a/web/viewer.html
+++ b/web/viewer.html
@@ -41,21 +41,22 @@
   <body>
     <div id="controls">
       <button id="previous" onclick="PDFView.page--;" oncontextmenu="return false;">
-        <img src="images/go-up.svg" align="top" height="16"/>
+        <img src="images/go-up.svg" align="top" height="16" />
         Previous
       </button>
 
       <button id="next" onclick="PDFView.page++;" oncontextmenu="return false;">
-        <img src="images/go-down.svg" align="top" height="16"/>
+        <img src="images/go-down.svg" align="top" height="16" />
         Next
       </button>
 
       <div class="separator"></div>
 
-      <input type="number" id="pageNumber" onchange="PDFView.page = this.value;" value="1" size="4" min="1" />
-
-      <span>/</span>
-      <span id="numPages">--</span>
+      <div id="pageSelector">
+        <input type="number" id="pageNumber" onchange="PDFView.page = this.value;" value="1" size="4" min="1" />
+        <span>/</span>
+        <span id="numPages">--</span>
+      </div>
 
       <div class="separator"></div>
 
@@ -100,7 +101,10 @@
       <div id="fileInputSeperator" class="separator"></div>
 
       <a href="#" id="viewBookmark" title="Bookmark (or copy) current location">
-        <img src="images/bookmark.svg" alt="Bookmark" align="top" height="16"/>
+        <button>
+          <img src="images/bookmark.svg" alt="Bookmark" align="top" height="16" />
+          Bookmark
+        </button>
       </a>
 
     </div>
@@ -147,6 +151,7 @@
         <div id="loading">Loading... 0%</div>
         <div id="loadingBar"><div class="progress"></div></div>
     </div>
-    <div id="viewer"></div>
+    <div id="viewerContainer"><div id="viewer"></div></div>
+    <div id="invisible"></div>
   </body>
 </html>
